<package format="3">
  <name>tmc_planning_msgs</name>
  <version>2.0.0</version>
  <description>Interfaces for motion planning</description>
  <maintainer email="xr-hsr-support@mail.toyota.co.jp">HSR Support</maintainer>

  <license>BSD 3-clause Clear License</license>

  <url type="website">None</url>
  
  <author>Keisuke Takeshita</author>
  <author>Koji Terada</author>
  <author>Yuta Watanabe</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tmc_manipulation_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>